# pip-inside

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
pip_inside/: __init__.py  main.py
pip_inside/commands/: add.py  build.py  init.py  install.py  list.py  publish.py  remove.py  shell.py  upgrade.py  version.py
pip_inside/utils/: dependencies.py  markers.py  misc.py  packages.py  pyproject.py  spinner.py  version_specifies.py
temp/: pyproject.toml
