[project]
name = "temp"
description = ""
authors = [{name = "orctom", email = "orctom@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["hao>=3.7"]

[build-system]
requires = ["flit_core>=3.8.0,<4"]
build-backend = "flit_core.buildapi"
